# retrivex

./: .gitignore  README.md  pyproject.toml  tutorial.ipynb
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_sources/: modules.rst.txt
docs/html/: genindex.html  modules.html  py-modindex.html  retrivex.html  search.html
docs/source/: conf.py  index.rst  retrivex.rst
retrivex/: __init__.py  _torch_utils.py  stransformers.py  visualization.py
tests/: __init__.py  test_stransformers.py  test_visualization.py
